--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="">
-        <nav class="navbar container navbar-expand-lg fixed-top">
+        <nav class="navbar container navbar-expand-lg">
             <div class="container-fluid">
                 <img role="button" tabindex="0" class="pointer" src="images/logo2.png" alt="">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -50,6 +50,18 @@
                 </div>
             </div>
         </nav>
+        <div class="container mt-4">
+            <div class="bg-primary bg-img d-flex flex-column justify-content-center align-items-center text-center ">
+                <h2 class="text-white heading-text">We Provide Effective <br> Legal Solutions</h2>
+                <p class="text-white mt-3">There are many variations of passages of Lorem Ipsum available, but the
+                    majority <br> have suffered
+                    alteration in some form, by injected humour.</p>
+                <div class="">
+                    <input class="head-input" placeholder="Search your service" type="email">
+                    <button class="button text-white fw-semibold">Search</button>
+                </div>
+            </div>
+        </div>
     </header>
     <main></main>
     <footer></footer>
