--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Legal Solution</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="icon/fav.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -22,7 +23,7 @@
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                        <img role="button" tabindex="0" class="pointer" src="images/logo2.png" alt="">
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
@@ -54,16 +55,77 @@
             <div class="bg-primary bg-img d-flex flex-column justify-content-center align-items-center text-center ">
                 <h2 class="text-white heading-text">We Provide Effective <br> Legal Solutions</h2>
                 <p class="text-white mt-3">There are many variations of passages of Lorem Ipsum available, but the
-                    majority <br> have suffered
+                    majority <br class="br"> have suffered
                     alteration in some form, by injected humour.</p>
                 <div class="">
                     <input class="head-input" placeholder="Search your service" type="email">
-                    <button class="button text-white fw-semibold">Search</button>
+                    <button class="button md:mt-0 mt-3  text-white fw-semibold">Search</button>
                 </div>
             </div>
         </div>
     </header>
-    <main></main>
+    <main class="container">
+        <section class="">
+            <h2 class="text-center the-legal-practice-area">The Legal Practice Area</h2>
+            <p class="text-center">There are many variations of passages of Lorem Ipsum available, but the majority have
+                <br class="br"> suffered alteration
+                in some form, by injected humour.
+            </p>
+
+            <div class="mt-5">
+                <div class="row grid-box">
+                    <div class="text-center col p-5 border-end border-bottom">
+                        <img src="images/business.png" alt="">
+                        <h3 class="mt-4">Business Law</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                            alteration in some form, by injected humour.</p>
+                        <img src="images/Frame.png" alt="">
+                    </div>
+                    <div class="text-center col p-5 border-bottom border-end">
+                        <img src="images/criminal.png" alt="">
+                        <h3 class="mt-4">Criminal Law</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                            alteration in some form, by injected humour.</p>
+                        <img src="images/Frame.png" alt="">
+                    </div>
+                    <div class="text-center col p-5 border-bottom">
+                        <img src="images/child.png" alt="">
+                        <h3 class="mt-4">Child Support</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                            alteration in some form, by injected humour.</p>
+                        <img src="images/Frame.png" alt="">
+                    </div>
+                </div>
+                <div class="row grid-box md:mt-5">
+                    <div class="text-center col p-5 border-bottom border-end">
+                        <img src="images/education.png" alt="">
+                        <h3 class="mt-4">Education Law</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour.</p>
+                        <img src="images/Frame.png" alt="">
+                    </div>
+                    <div class="text-center col p-5 border-bottom border-end">
+                        <img src="images/divorce.png" alt="">
+                        <h2 class="mt-4">Divorce Law</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour.</p>
+                        <img src="images/Frame.png" alt="">
+                    </div>
+                    <div class="text-center col  p-5 border-bottom">
+                        <img src="images/tax.png" alt="">
+                        <h2 class="mt-4">Taxt Law</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour.</p>
+                        <img src="images/Frame.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
