--- a/index.html
+++ b/index.html
@@ -77,21 +77,24 @@
                     <div class="text-center col p-5 border-end border-bottom">
                         <img src="images/business.png" alt="">
                         <h3 class="mt-4">Business Law</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
                             alteration in some form, by injected humour.</p>
                         <img src="images/Frame.png" alt="">
                     </div>
                     <div class="text-center col p-5 border-bottom border-end">
                         <img src="images/criminal.png" alt="">
                         <h3 class="mt-4">Criminal Law</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
                             alteration in some form, by injected humour.</p>
                         <img src="images/Frame.png" alt="">
                     </div>
                     <div class="text-center col p-5 border-bottom">
                         <img src="images/child.png" alt="">
                         <h3 class="mt-4">Child Support</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
                             alteration in some form, by injected humour.</p>
                         <img src="images/Frame.png" alt="">
                     </div>
@@ -122,6 +125,72 @@
                         <img src="images/Frame.png" alt="">
                     </div>
                 </div>
+            </div>
+
+        </section>
+        <section>
+            <h2 class="text-center the-legal-practice-area">What Our Client Say</h2>
+            <p class="text-center">There are many variations of passages of Lorem Ipsum available, but the majority have
+                <br class="br"> suffered alteration
+                in some form, by injected humour.
+            </p>
+            <div id="carouselExampleDark" class="carousel carousel-dark slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="images/slider-1.jpg" class="slider-item d-block w-100" alt="...">
+                        <div class="carousel-caption d-md-block">
+                            <img class="slider-client client" src="images/client-1.jpg" alt="">
+                            <h5 class="text-white">Jenifer Smith</h5>
+                            <p class="text-white">Teacher</p>
+                            <p class="text-white mt-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It
+                                has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years
+                                old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked
+                                up one of the more obscure Latin words, consectetur.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="images/slider-1.jpg" class="slider-item d-block w-100" alt="...">
+                        <div class="carousel-caption d-md-block">
+                            <img class="slider-client client" src="images/client-2.jpg" alt="">
+                            <h5 class="text-white">Awlad Hossain</h5>
+                            <p class="text-white">Business Man</p>
+                            <p class="text-white mt-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It
+                                has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years
+                                old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked
+                                up one of the more obscure Latin words, consectetur.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/slider-1.jpg" class="slider-item  d-block w-100" alt="...">
+                        <div class="carousel-caption d-md-block">
+                            <img class="slider-client client" src="images/client-3.jpg" alt="">
+                            <h5 class="text-white">Jenny Houq</h5>
+                            <p class="text-white">Student</p>
+                            <p class="text-white mt-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It
+                                has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years
+                                old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked
+                                up one of the more obscure Latin words, consectetur.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
 
         </section>
