--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         </div>
     </header>
     <main class="container">
-        <section class="">
+        <!-- Legal Practice area section -->
+        <section>
             <h2 class="text-center the-legal-practice-area">The Legal Practice Area</h2>
             <p class="text-center">There are many variations of passages of Lorem Ipsum available, but the majority have
                 <br class="br"> suffered alteration
@@ -100,7 +101,7 @@
                     </div>
                 </div>
                 <div class="row grid-box md:mt-5">
-                    <div class="text-center col p-5 border-bottom border-end">
+                    <div class="text-center col p-5 border-end">
                         <img src="images/education.png" alt="">
                         <h3 class="mt-4">Education Law</h3>
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have
@@ -108,7 +109,7 @@
                             alteration in some form, by injected humour.</p>
                         <img src="images/Frame.png" alt="">
                     </div>
-                    <div class="text-center col p-5 border-bottom border-end">
+                    <div class="text-center col p-5 border-end">
                         <img src="images/divorce.png" alt="">
                         <h2 class="mt-4">Divorce Law</h2>
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have
@@ -116,7 +117,7 @@
                             alteration in some form, by injected humour.</p>
                         <img src="images/Frame.png" alt="">
                     </div>
-                    <div class="text-center col  p-5 border-bottom">
+                    <div class="text-center col  p-5 ">
                         <img src="images/tax.png" alt="">
                         <h2 class="mt-4">Taxt Law</h2>
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have
@@ -128,6 +129,7 @@
             </div>
 
         </section>
+        <!-- Client Review Section -->
         <section>
             <h2 class="text-center the-legal-practice-area">What Our Client Say</h2>
             <p class="text-center">There are many variations of passages of Lorem Ipsum available, but the majority have
@@ -145,36 +147,39 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="images/slider-1.jpg" class="slider-item d-block w-100" alt="...">
+                        <img src="images/slider-1.jpg" class="rounded slider-item d-block w-100" alt="...">
                         <div class="carousel-caption d-md-block">
                             <img class="slider-client client" src="images/client-1.jpg" alt="">
                             <h5 class="text-white">Jenifer Smith</h5>
-                            <p class="text-white">Teacher</p>
-                            <p class="text-white mt-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It
+                            <p class="text-warning">Teacher</p>
+                            <p class="text-white mt-4">Contrary to popular belief, Lorem Ipsum is not simply random
+                                text. It
                                 has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years
                                 old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked
                                 up one of the more obscure Latin words, consectetur.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
-                        <img src="images/slider-1.jpg" class="slider-item d-block w-100" alt="...">
+                        <img src="images/slider-1.jpg" class="rounded slider-item d-block w-100" alt="...">
                         <div class="carousel-caption d-md-block">
                             <img class="slider-client client" src="images/client-2.jpg" alt="">
                             <h5 class="text-white">Awlad Hossain</h5>
-                            <p class="text-white">Business Man</p>
-                            <p class="text-white mt-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It
+                            <p class="text-warning">Business Man</p>
+                            <p class="text-white mt-4">Contrary to popular belief, Lorem Ipsum is not simply random
+                                text. It
                                 has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years
                                 old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked
                                 up one of the more obscure Latin words, consectetur.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/slider-1.jpg" class="slider-item  d-block w-100" alt="...">
+                        <img src="images/slider-1.jpg" class="rounded slider-item  d-block w-100" alt="...">
                         <div class="carousel-caption d-md-block">
                             <img class="slider-client client" src="images/client-3.jpg" alt="">
                             <h5 class="text-white">Jenny Houq</h5>
-                            <p class="text-white">Student</p>
-                            <p class="text-white mt-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It
+                            <p class="text-warning">Student</p>
+                            <p class="text-white mt-4">Contrary to popular belief, Lorem Ipsum is not simply random
+                                text. It
                                 has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years
                                 old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked
                                 up one of the more obscure Latin words, consectetur.</p>
@@ -192,7 +197,87 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-
+        </section>
+        <!-- FAQ Section -->
+        <section class="mt-5 py-5 rounded">
+            <h2 class="text-center the-legal-practice-area">Frequently Asked Any Questions</h2>
+            <p class="text-center">There are many variations of passages of Lorem Ipsum available, but the majority have
+                <br class="br"> suffered alteration
+                in some form, by injected humour.
+            </p>
+            <div class="row g-4 row-cols-1 row-cols-md-2 md:mt-5 justify-content-center align-items-center">
+                <div class="col align-items-center">
+                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                        <div class="accordion-item p-2">
+                            <h2 class="accordion-header" id="flush-headingOne">
+                                <button class="faq fs-5 accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                    aria-controls="flush-collapseOne">
+                                    Are application fee waivers available?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">There are many variations of passages of Lorem Ipsum
+                                    available, but the majority have suffered alteration in some form, by injected
+                                    humour.
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="accordion-item p-2">
+                            <h2 class="accordion-header" id="flush-headingOne">
+                                <button class="faq fs-5 accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                    aria-controls="flush-Two">
+                                    Are application fee waivers available?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">There are many variations of passages of Lorem Ipsum
+                                    available, but the majority have suffered alteration in some form, by injected
+                                    humour.
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="accordion-item p-2">
+                            <h2 class="accordion-header" id="flush-headingThree">
+                                <button class="faq fs-5 accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                    aria-controls="flush-collapseThree">
+                                    Are application fee waivers available?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">There are many variations of passages of Lorem Ipsum
+                                    available, but the majority have suffered alteration in some form, by injected
+                                    humour.
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="accordion-item p-2">
+                            <h2 class="accordion-header" id="flush-headingFour">
+                                <button class="faq fs-5 accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseFour" aria-expanded="false"
+                                    aria-controls="flush-collapseFour">
+                                    Are application fee waivers available?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseFour" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">There are many variations of passages of Lorem Ipsum
+                                    available, but the majority have suffered alteration in some form, by injected
+                                    humour.
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+                <div class="col text-center">
+                    <img class="w-75" src="images/faq.png" alt="">
+                </div>
+            </div>
         </section>
     </main>
     <footer></footer>
