--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                     <div class="accordion accordion-flush" id="accordionFlushExample">
                         <div class="accordion-item p-2">
                             <h2 class="accordion-header" id="flush-headingOne">
-                                <button class="faq fs-5 accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                <button class="faq fs-5 accordion-button collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false"
                                     aria-controls="flush-collapseOne">
                                     Are application fee waivers available?
                                 </button>
@@ -223,11 +223,11 @@
                                     humour.
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                         <div class="accordion-item p-2">
                             <h2 class="accordion-header" id="flush-headingOne">
-                                <button class="faq fs-5 accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                <button class="faq fs-5 accordion-button collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false"
                                     aria-controls="flush-Two">
                                     Are application fee waivers available?
                                 </button>
@@ -239,12 +239,12 @@
                                     humour.
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                         <div class="accordion-item p-2">
                             <h2 class="accordion-header" id="flush-headingThree">
-                                <button class="faq fs-5 accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                    aria-controls="flush-collapseThree">
+                                <button class="faq fs-5 accordion-button collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
+                                    aria-expanded="false" aria-controls="flush-collapseThree">
                                     Are application fee waivers available?
                                 </button>
                             </h2>
@@ -255,11 +255,11 @@
                                     humour.
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                         <div class="accordion-item p-2">
                             <h2 class="accordion-header" id="flush-headingFour">
-                                <button class="faq fs-5 accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#flush-collapseFour" aria-expanded="false"
+                                <button class="faq fs-5 accordion-button collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false"
                                     aria-controls="flush-collapseFour">
                                     Are application fee waivers available?
                                 </button>
@@ -271,11 +271,62 @@
                                     humour.
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
                 <div class="col text-center">
                     <img class="w-75" src="images/faq.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Contact Section -->
+        <section>
+            <h2 class="text-center the-legal-practice-area">Contact With Us</h2>
+            <p class="text-center">There are many variations of passages of Lorem Ipsum available, but the majority have
+                <br class="br"> suffered alteration
+                in some form, by injected humour.
+            </p>
+            <div class="d-flex contact gap-5 md:flex-row align-items-center mt-5">
+                <div class="row row-cols-2">
+                    <div class="text-center border-end border-bottom p-4">
+                        <img src="images/location.png" alt="">
+                        <h5 class="faq mt-2">Address</h5>
+                        <p>A108 Adam Street, <br> New York, NY 535022</p>
+                    </div>
+                    <div class="text-center p-4 border-bottom">
+                        <img src="images/call.png" alt="">
+                        <h5 class="faq mt-2">Call Us</h5>
+                        <p>+88 01750 00 00 00 <br> +88 01750 00 00 00</p>
+                    </div>
+                    <div class="text-center border-end p-4">
+                        <img src="images/email.png" alt="">
+                        <h5 class="faq mt-2">Emaill Us</h5>
+                        <p>info@gmail.com <br> info@gmail.com</p>
+                    </div>
+                    <div class="text-center p-4">
+                        <img src="images/time.png" alt="">
+                        <h5 class="faq mt-2">Working Hours</h5>
+                        <p>Mon-Fri: 9AM to 5PM <br> Sunday: 9AM to 1 PM</p>
+                    </div>
+                </div>
+                <div class="w-50 contact-form">
+                    <form class="">
+                        <div class="mb-3"> 
+                            <input type="name" placeholder="Your Name" class="form-control py-3" id="exampleInputName">
+                        </div>
+                        <div class="mb-3">
+                            <input type="email" placeholder="Your Emaill" class="form-control py-3" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3">
+                            <input type="text" placeholder="Subject" class="form-control py-3" id="exampleInputText"> 
+                        </div>
+                        <div class="mb-2">
+                            <label for="">Your Message</label>
+                            <input type="text" class="form-control mt-1 py-5" id="exampleInputText"> 
+                        </div>
+                        <button type="submit" class="button text-white fw-bold w-100">Send Message</button>
+                    </form>
                 </div>
             </div>
         </section>
