--- a/index.html
+++ b/index.html
@@ -287,43 +287,43 @@
                 in some form, by injected humour.
             </p>
             <div class="d-flex contact gap-5 md:flex-row align-items-center mt-5">
-                <div class="row row-cols-2">
-                    <div class="text-center border-end border-bottom p-4">
+                <div class="row w-100 row-cols-2">
+                    <div class="text-center border-end border-bottom p-md-4 p-2">
                         <img src="images/location.png" alt="">
                         <h5 class="faq mt-2">Address</h5>
                         <p>A108 Adam Street, <br> New York, NY 535022</p>
                     </div>
-                    <div class="text-center p-4 border-bottom">
+                    <div class="text-center p-md-4 border-bottom p-2">
                         <img src="images/call.png" alt="">
                         <h5 class="faq mt-2">Call Us</h5>
                         <p>+88 01750 00 00 00 <br> +88 01750 00 00 00</p>
                     </div>
-                    <div class="text-center border-end p-4">
+                    <div class="text-center border-end p-md-4 p-2">
                         <img src="images/email.png" alt="">
                         <h5 class="faq mt-2">Emaill Us</h5>
                         <p>info@gmail.com <br> info@gmail.com</p>
                     </div>
-                    <div class="text-center p-4">
+                    <div class="text-center p-md-4 p-2">
                         <img src="images/time.png" alt="">
                         <h5 class="faq mt-2">Working Hours</h5>
                         <p>Mon-Fri: 9AM to 5PM <br> Sunday: 9AM to 1 PM</p>
                     </div>
                 </div>
-                <div class="w-50 contact-form">
+                <div class="w-md-50 w-100 form contact-form">
                     <form class="">
-                        <div class="mb-3"> 
+                        <div class="mb-3">
                             <input type="name" placeholder="Your Name" class="form-control py-3" id="exampleInputName">
                         </div>
                         <div class="mb-3">
-                            <input type="email" placeholder="Your Emaill" class="form-control py-3" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
+                            <input type="email" placeholder="Your Emaill" class="form-control py-3"
+                                id="exampleInputEmail1" aria-describedby="emailHelp">
                         </div>
                         <div class="mb-3">
-                            <input type="text" placeholder="Subject" class="form-control py-3" id="exampleInputText"> 
+                            <input type="text" placeholder="Subject" class="form-control py-3" id="exampleInputText">
                         </div>
                         <div class="mb-2">
                             <label for="">Your Message</label>
-                            <input type="text" class="form-control mt-1 py-5" id="exampleInputText"> 
+                            <input type="text" class="form-control mt-1 py-5" id="exampleInputText">
                         </div>
                         <button type="submit" class="button text-white fw-bold w-100">Send Message</button>
                     </form>
@@ -331,10 +331,42 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="mt-5 bg-black p-5">
+        <div class="footer-container mx-auto row row-cols-1 row-cols-md-4">
+            <div>
+                <img src="images/logo.png" alt="">
+                <p class="footer-text mt-3">There are many variations of <br class="br"> passages of Lorem Ipsum <br class="br"> available, but the majority
+                    have <br class="br"> suffered
+                    alteration in some <br class="br"> form, by injected humour.</p>
+            </div>
+            <div>
+                <h5 class="foot-text-title">Usefull Link</h5>
+                <ul class="footer-text p-0 mt-3">
+                    <li class="mb-3">Home</li>
+                    <li class="mb-3">About Us</li>
+                    <li class="mb-3">Cases</li>
+                    <li class="mb-3">Blog</li>
+                </ul>
+            </div>
+            <div>
+                <h5 class="foot-text-title">Contact Now</h5>
+                <p class="footer-text mt-3">555 4th 5t NW, Washington <br> DC 20530, United States</p>
+                <p class="footer-text">+88 01750 000 000 <br> +88 01750 000 000</p>
+                <p class="footer-text">info@gmail.com <br> info@gmail.com</p>
+            </div>
+            <div>
+                <h5 class="foot-text-title">Subscribe</h5>
+                <p class="footer-text mt-3">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</p>
+                <div class="row">
+                    <input class="py-2 rounded" type="email" placeholder="Emaill Address">
+                    <button class="mt-2 text-white fw-bold button-subs">Subscribe</button>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
