--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             </div>
         </section>
     </main>
-    <footer class="mt-5 bg-black p-5">
+    <footer class="mt-5 bg-black footer-padding p-5">
         <div class="footer-container mx-auto row row-cols-1 row-cols-md-4">
             <div>
                 <img src="images/logo.png" alt="">
@@ -363,6 +363,7 @@
                 </div>
             </div>
         </div>
+        <p class="text-white text-center mt-md-5 mt-4">© All right reserve > <a target="_blank" class="text-warning" href="https://github.com/mehu-hub">NoobDev</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
