--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             </div>
         </section>
     </main>
-    <footer class="mt-5 bg-black footer-padding p-5">
+    <footer class="footer-padding">
         <div class="footer-container mx-auto row row-cols-1 row-cols-md-4">
             <div>
                 <img src="images/logo.png" alt="">
